tests/miniJava/pos/000683_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) if ( 0 ) { } else { } else if ( 0 ) { } else { } } }
