tests/miniJava/neg/005744_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } String class java { }
